--- a/cont.css
+++ b/cont.css
@@ -27,3 +27,18 @@ body {
     text-decoration: none;
     margin-top: 10px;
 }
+.moving-background {
+    font-size: 36px;
+    color: white;
+    background: linear-gradient(270deg, #ff7f50, #1e90ff, #ff6347, #32cd32);
+    background-size: 800% 800%;
+    animation: moveBackground 10s ease infinite;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+@keyframes moveBackground {
+    0% { background-position: 0% 50%; }
+    50% { background-position: 100% 50%; }
+    100% { background-position: 0% 50%; }
+}
