--- a/port.css
+++ b/port.css
@@ -18,6 +18,7 @@ body {
 }
 .container {
     display: flex; 
+    flex-direction: column;
     align-items: center;
     margin: 20px;
 }
@@ -95,3 +96,4 @@ body {
 #int1{
     margin: 20px; 
 }
+.moreinfo{margin-top: 50px;margin-left: -700px;}
