--- a/cont.css
+++ b/cont.css
@@ -30,6 +30,8 @@ body {
 .moving-background {
     font-size: 36px;
     color: white;
+    border: black 2px solid;
+    border-radius: 10px;
     background: linear-gradient(270deg, #ff7f50, #1e90ff, #ff6347, #32cd32);
     background-size: 800% 800%;
     animation: moveBackground 10s ease infinite;
