--- a/cont.css
+++ b/cont.css
@@ -36,7 +36,7 @@ body {
     background-size: 800% 800%;
     animation: moveBackground 10s ease infinite;
     -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
+    -webkit-text-fill-color: transparent;padding-left: 30px;
 }
 
 @keyframes moveBackground {
